--- a/src/Web/SunNext.Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_Layout.cshtml
@@ -10,50 +10,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - @GlobalConstants.SystemName</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
     <style>
-
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background: linear-gradient(to bottom right, #0e1117, #1c1f26);
-            color: #e0e0e0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .main-wrapper {
-            flex: 1 0 auto; 
-            display: flex;
-            flex-direction: column;
-            min-height: 0; 
-        }
-
-        .container {
-            flex: 1;
-        }
-
-        main {
-            flex: 1;
-        }
-
-        .footer {
-            flex-shrink: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.2);
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            margin-top: auto; 
-        }
+       
     </style>
 
 </head>
@@ -84,6 +51,10 @@
 <script src="~/js/site.min.js" asp-append-version="true"></script>
 <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 <script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
     document.addEventListener("DOMContentLoaded", function () {
         const lightbox = GLightbox({
             selector: '.glightbox'
@@ -96,6 +67,7 @@
             }
         });
     });
+
 
 </script>
 
