--- a/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_Navbar.cshtml
@@ -48,8 +48,8 @@
                                 <i class="bi bi-graph-up-arrow me-1"></i> Trading
                             </a>
                             <ul class="dropdown-menu bg-dark border-0 mt-1">
-                                <li><a class="dropdown-item text-white" asp-controller="Trade" asp-action="Index">📈 Recommendations</a></li>
-                                <li><a class="dropdown-item text-white" asp-controller="Trade" asp-action="Targets">🎯 Targets</a></li>
+                                <li><a class="dropdown-item text-white" asp-controller="Market" asp-action="Index">📈 Recommendations</a></li>
+                                <li><a class="dropdown-item text-white" asp-controller="Market" asp-action="Targets">🎯 Targets</a></li>
                             </ul>
                         </li>
                     }
