--- a/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
                 </a>
                 <ul class="dropdown-menu bg-dark" aria-labelledby="adminDropdown">
                     <li><a class="dropdown-item text-white" asp-area="Administration" asp-controller="User"
-                           asp-action="AdminOverview">Overview</a></li>
+                           asp-action="AdminCockpit">Cockpit</a></li>
                     <li><a class="dropdown-item text-white" asp-area="Administration" asp-controller="User"
                            asp-action="AdminUsers">Manage Users</a></li>
                 </ul>
