--- a/src/Web/SunNext.Web/Views/Market/_TradePositionModal.cshtml
+++ b/src/Web/SunNext.Web/Views/Market/_TradePositionModal.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model SunNext.Web.ViewModels.Market.TradePositionInputModel
 
 <div class="modal fade" id="tradePositionModal" tabindex="-1" aria-labelledby="tradePositionModalLabel" aria-hidden="true">
