--- a/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using SunNext.Common
 @using SunNext.Data.Models
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @inject SignInManager<ApplicationUser> SignInManager
 
 <ul class="navbar-nav">
