--- a/src/Web/SunNext.Web/Views/SolarAsset/AdminAll.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarAsset/AdminAll.cshtml
@@ -1,6 +1,7 @@
 @model SunNext.Web.ViewModels.SolarAssets.AllSolarAssetsQueryModel
 @using SunNext.Common.Enums
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     ViewData["Title"] = "🔧 Solar Assets Administration";
