--- a/src/Web/SunNext.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/Web/SunNext.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http.Features
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     var consentFeature = this.Context.Features.Get<ITrackingConsentFeature>();
