--- a/src/Web/SunNext.Web/Views/SolarAsset/Edit.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarAsset/Edit.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model SunNext.Web.ViewModels.SolarAssets.SolarAssetFormModel
 @{
     ViewData["Title"] = "Edit Asset";
