--- a/src/Web/SunNext.Web/Views/User/Admin/Cockpit.cshtml
+++ b/src/Web/SunNext.Web/Views/User/Admin/Cockpit.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model SunNext.Web.ViewModels.User.AdminDashboardViewModel
 @{
     ViewData["Title"] = "Admin Cockpit";
